# qcnico

./: .gitignore  README  pyproject.toml
qcnico/: __init__.py  coords_io.py  data_utils.py  find_edge_carbons.py  graph_tools.py  jitted_cluster_utils.py  lattice.py  md_utils.py  mo_plots.py  mo_plotting.py  molecule.py  pair_corr_func.py  pixel2xyz.py  plt_utils.py  qcff_input.py  qcffpi_io.py  qchemMAC.py  qcplots.py  remove_dangling_carbons.py  reprotonate.py  rotate_pos.py  vdos.py
qcnico/qcnico.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
qcnico/tests/: brute_force_find_edge_carbons.py  components_test.py  cryst_v_isolated_hexagons.py  crystalline_clusters.py  get_lammps_frame_timing.py  jitted_v_vanilla_components.py  label_atoms.py  multiple_histograms.py  plot_structures.py  plot_test_rebuild.py  random_cell.py  read_lammps_traj_test.py  rebuild_clusters_from_subsamp.py  stream_test.py
src/: graph_tools.py  qcffpi_io.py  qchemMAC.py
src/qcnico.egg-info/: requires.txt
